JumpScript/tests/baselines/reference/parser509630.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509630.jump(3,1): error TS1137: Expression or comma expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509630.jump (1 errors) ====
    class Type {
        public examples = [ // typing here
    }
    ~
!!! error TS1137: Expression or comma expected.
    class Any extends Type {
    }
    